<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/LightSalmon">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/red_text"
        android:hint="@string/Name"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_cost"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="@color/red_text"
        android:hint="@string/Number"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_desc"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="340dp"
        android:backgroundTint="@color/red_text"
        android:hint="@string/Job"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/red_text"
        android:textColorHint="@color/red_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/add"
        android:backgroundTint="@color/Salmon"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/Salmon"
        android:text="@string/showInfo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/delete"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/Tomato"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_button"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>